--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.1.2",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
   }
 }
