--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "cnfg": "^1.1.1",
     "connect-mongo": "^1.3.2",
     "css-loader": "^0.23.1",
+    "eslint": "^3.2.2",
+    "eslint-loader": "^1.5.0",
     "express": "^4.14.0",
     "express-api-response": "^0.3.0",
     "express-session": "^1.14.0",
