--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap-stylus": "^0.2.2",
     "cnfg": "^1.1.1",
