--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "bootstrap-stylus": "^0.2.2",
     "cnfg": "^1.1.1",
     "connect-mongo": "^1.3.2",
     "css-loader": "^0.23.1",
+    "eslint": "^3.2.2",
+    "eslint-loader": "^1.5.0",
     "express": "^4.14.0",
     "express-api-response": "^0.3.0",
     "express-session": "^1.14.0",
