--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap-stylus": "^0.2.2",
     "cnfg": "^1.1.1",
     "connect-mongo": "^1.3.2",
+    "cookies": "^0.6.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
     "eslint-loader": "^1.5.0",
@@ -44,6 +45,7 @@
     "express-api-response": "^0.3.0",
     "express-session": "^1.14.0",
     "fs": "0.0.2",
+    "jsonwebtoken": "^7.1.7",
     "mongoose": "^4.5.8",
     "ngcomponentrouter": "^2.1.0",
     "path": "^0.12.7",
