--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-loader": "^1.5.0",
     "express": "^4.14.0",
     "express-api-response": "^0.3.0",
+    "express-mongoose-docs": "^0.3.1",
     "express-session": "^1.14.0",
     "fs": "0.0.2",
     "jsonwebtoken": "^7.1.7",
