--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "unnamed",
-  "version": "0.0.1",
-  "description": "",
-  "main": "backend/server.js",
-  "scripts": {
-    "start": "node ./backend/server.js",
-    "test": "echo \"Error: no test specified\""
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "authors": [
+    "name": "unnamed",
+    "version": "0.0.1",
+    "description": "",
+    "main": "backend/server.js",
+    "scripts": {
+        "start": "node ./backend/server.js",
+        "test": "echo \"Error: no test specified\""
+    },
+    "repository": {
+        "type": "git",
+        "url": ""
+    },
+    "authors": [
     "Dmitriy Beseda <dmitriy.beseda@binary.studio.com>",
     "Ihor Habshiy <ihor.habshiy@binary-studio.com>",
     "Dmytro Olashin <bender.d1mon@gmail.com>",
@@ -25,38 +25,41 @@
     "Antone Stepanishin <step.ant.vic@gmail.com>",
     "Yaroslav Neznaradko <nezn27@gmail.com>"
   ],
-  "license": "",
-  "devDependencies": {},
-  "dependencies": {
-    "angular": "^1.5.8",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.15.2",
-    "bootstrap-stylus": "^0.2.2",
-    "cnfg": "^1.1.1",
-    "connect-mongo": "^1.3.2",
-    "cookies": "^0.6.1",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.2.2",
-    "eslint-loader": "^1.5.0",
-    "express": "^4.14.0",
-    "express-api-response": "^0.3.0",
-    "express-mongoose-docs": "^0.3.1",
-    "express-session": "^1.14.0",
-    "fs": "0.0.2",
-    "jsonwebtoken": "^7.1.7",
-    "mongoose": "^4.5.8",
-    "ngcomponentrouter": "^2.1.0",
-    "path": "^0.12.7",
-    "pug": "^2.0.0-beta4",
-    "pug-loader": "^2.1.0",
-    "replacestream": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.1.2",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1"
-  }
+    "license": "",
+    "devDependencies": {},
+    "dependencies": {
+        "angular": "^1.5.8",
+        "babel-core": "^6.11.4",
+        "babel-loader": "^6.2.4",
+        "babel-preset-es2015": "^6.9.0",
+        "bcrypt-nodejs": "0.0.3",
+        "body-parser": "^1.15.2",
+        "bootstrap-stylus": "^0.2.2",
+        "cnfg": "^1.1.1",
+        "connect-mongo": "^1.3.2",
+        "cookies": "^0.6.1",
+        "css-loader": "^0.23.1",
+        "eslint": "^3.2.2",
+        "eslint-loader": "^1.5.0",
+        "express": "^4.14.0",
+        "express-api-response": "^0.3.0",
+        "express-mongoose-docs": "^0.3.1",
+        "express-session": "^1.14.0",
+        "fs": "0.0.2",
+        "jsonwebtoken": "^7.1.7",
+        "mongoose": "^4.5.8",
+        "ngcomponentrouter": "^2.1.0",
+        "path": "^0.12.7",
+        "pug": "^2.0.0-beta4",
+        "pug-loader": "^2.1.0",
+        "replacestream": "^4.0.0",
+        "style-loader": "^0.13.1",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^2.1.2",
+        "webpack": "^1.13.1",
+        "webpack-dev-middleware": "^1.6.1",
+        "jade": "^1.11.0",
+        "nodemailer": "^2.5.0",
+        "xoauth2": "^1.2.0"
+    }
 }
