--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "",
   "devDependencies": {},
   "dependencies": {
+    "alertifyjs": "^1.8.0",
     "angular": "^1.5.8",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
@@ -48,6 +49,7 @@
     "fs": "0.0.2",
     "jsonwebtoken": "^7.1.7",
     "mongoose": "^4.5.8",
+    "ng-alertify": "^0.9.0",
     "ngcomponentrouter": "^2.1.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta4",
