Fixed syntax error in packages.json

--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
         "jade": "^1.11.0",
         "nodemailer": "^2.5.0",
         "xoauth2": "^1.2.0",
-        "alertifyjs": "^1.8.0",
+        "alertifyjs": "^1.8.0"
     }
 }
