--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "alertifyjs": "^1.8.0",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
+    "angular-sanitize": "^1.5.8",
     "angular-ui-bootstrap": "^2.0.2",
     "authorizenet": "0.0.1",
     "babel-core": "^6.11.4",
