--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "connect-mongo": "^1.3.2",
     "cookies": "^0.6.1",
     "css-loader": "^0.23.1",
+    "current-week-number": "^1.0.7",
     "eslint": "^3.2.2",
     "eslint-loader": "^1.5.0",
     "express": "^4.14.0",
@@ -57,6 +58,7 @@
     "jsonwebtoken": "^7.1.7",
     "mongoose": "^4.5.8",
     "ngcomponentrouter": "^2.1.0",
+    "node-schedule": "^1.1.1",
     "nodemailer": "^2.5.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta4",
