--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "path": "^0.12.7",
     "pug": "^2.0.0-beta4",
     "pug-loader": "^2.1.0",
+    "random-token": "0.0.8",
     "replacestream": "^4.0.0",
+    "s-date": "^1.2.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.1.2",
