filewrapper directive Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   ],
   "license": "",
   "dependencies": {
-    "async": "^2.0.1",
     "alertifyjs": "^1.8.0",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-sanitize": "^1.5.8",
     "angular-ui-bootstrap": "^2.0.2",
+    "async": "^2.0.1",
     "authorizenet": "0.0.1",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
@@ -53,6 +53,7 @@
     "express-fileupload": "0.0.5",
     "express-mongoose-docs": "^0.3.1",
     "express-session": "^1.14.0",
+    "express-zip": "^2.0.1",
     "fs": "0.0.2",
     "jade": "^1.11.0",
     "jsonwebtoken": "^7.1.7",
