--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "Shulyakov Dmitriy <d.shuliakov@gmail.com>",
     "Valeriy Kovalenko <vplusk.od@gmail.com>",
     "Ivan Stanko <ivan_stanko@ukr.net>",
-    "Vasyl Terlitskiy <vasiafb9@gmail.com>",
+    "Vasyl Terletskyi <vasiafb9@gmail.com>",
     "Mykola Kris <krise96@gmail.com>",
     "Antone Stepanishin <step.ant.vic@gmail.com>",
     "Yaroslav Neznaradko <nezn27@gmail.com>"
