--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "alertifyjs": "^1.8.0",
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
+    "angular-cookies": "^1.5.8",
+    "angular-jwt": "^0.1.3",
     "angular-sanitize": "^1.5.8",
     "angular-ui-bootstrap": "^2.0.2",
     "async": "^2.0.1",
