--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "Ihor Habshiy <ihor.habshiy@binary-studio.com>",
     "Dmytro Olashin <bender.d1mon@gmail.com>",
     "Andrew Hanchuk <andreyblind@gmail.com>",
-    "Yevhen Verva <verba_e_k@mail.ru>",
+    "Yevhen Verba <verba_e_k@mail.ru>",
     "Shulyakov Dmitriy <d.shuliakov@gmail.com>",
     "Valeriy Kovalenko <vplusk.od@gmail.com>",
     "Ivan Stanko <ivan_stanko@ukr.net>",
